--- a/pages/foodItems/foodItems.wxml
+++ b/pages/foodItems/foodItems.wxml
@@ -16,7 +16,7 @@
         <text>{{item.name}}</text>
         <text wx:if='{{item.type === 1}}'>以下为默认菜品</text>
         <text wx:elif='{{item.type === 2}}'>以下菜品不限量供应</text>
-        <text wx:elif='{{item.type === 3}}'>以下菜品任选{{foodNum}}份，已选{{foods.foodNumber}}份</text>
+        <text wx:elif='{{item.type === 3}}'>以下菜品任选{{foodNum}}份，已选{{dateFr.getGroupSelectedFoodNumber(item.id, foods.subFoodItems)}}份</text>
       </view>
       <view class='food_row'>
         <block wx:for='{{item.foods}}' wx:for-item='food' wx:for-index='idx' wx:key='{{idx}}'>
@@ -80,7 +80,7 @@
       </view>
       <view class='row'>
         <scroll-view scroll-y='{{true}}'>
-          <block wx:for='{{foodItems}}' wx:key='{{index}}'>
+          <block wx:for='{{foods.subFoodItems}}' wx:key='{{index}}'>
             <view class='list' wx:if='{{ item.foodId === selectFood.id}}'>
               <view class='left'>
                 <view class='name'>{{selectFood.foodName}}</view>
