--- a/pages/foodItems/foodItems.wxml
+++ b/pages/foodItems/foodItems.wxml
@@ -13,10 +13,10 @@
   <block wx:for='{{groups}}' wx:key='{{index}}'>
     <view class='group'>
       <view class='title'>
-        <text>{{item.name}}</text>
+        <text class='{{item.type === 3 ? showErrorTips : ""}}'>{{item.name}}</text>
         <text wx:if='{{item.type === 1}}'>以下为默认菜品</text>
         <text wx:elif='{{item.type === 2}}'>以下菜品不限量供应</text>
-        <text wx:elif='{{item.type === 3}}'>以下菜品任选{{foodNum}}份，已选{{dateFr.getGroupSelectedFoodNumber(item.id, foods.subFoodItems)}}份</text>
+        <text class='{{showErrorTips}}' wx:elif='{{item.type === 3}}'>以下菜品任选{{foodNum}}份，已选{{dateFr.getGroupSelectedFoodNumber(item.id, foods.subFoodItems)}}份</text>
       </view>
       <view class='food_row'>
         <block wx:for='{{item.foods}}' wx:for-item='food' wx:for-index='idx' wx:key='{{idx}}'>
@@ -25,7 +25,7 @@
               <image mode='aspectFill' src='{{food.poster + "?x-oss-process=image/resize,w_600"}}'></image>
             </view>
             <view class='food_info'>
-              <view class='title'>{{food.foodName}}</view>
+              <view class='title {{item.type === 3 ? showErrorTips : ""}}'>{{food.foodName}}</view>
               <view class='subTitle'>{{food.introduce}}</view>
             </view>
             <view class='food_num'>
