--- a/pages/foodorder/foodorder.wxml
+++ b/pages/foodorder/foodorder.wxml
@@ -3,7 +3,7 @@
 <import src="../../wxParse/wxParse.wxml" />
 <view class='container'>
   <view class='top_info'>
-    <view class='goods'>
+    <view class='goods' data-gid='{{goods.goodsInfo.gid}}' bindtap='handleGoToTheGoodsDetailPage'>
       <view class='goods_main'>
         <view class='poster'>
           <image mode='aspectFill' src='{{goods.goodsBase.poster ? goods.goodsBase.poster + "?x-oss-process=image/resize,w_600" : ""}}'></image>
@@ -39,7 +39,7 @@
           </view>
           <view class='text'>桌号</view>
         </view>
-        <view class='fullName'>{{tno || '无'}}</view>
+        <view class='fullName'>{{tableNo || '无'}}</view>
       </view>
       <view class='divider'></view>
       <view class='eat_number'>
@@ -58,8 +58,9 @@
     </view>
   </view>
   <view class='food_row'>
+    <view class='self_help_tips'wx:if='{{dateFr.getSelfHelpTipsShow(selfHelp, foodItems, consumerCount)}}'>全部放题至少选{{consumerCount}}份，已选{{dateFr.getSelfHelpFoodNumber(selfHelp, foodItems)}}份</view>
     <view class='category'>
-      <scroll-view scroll-y='{{true}}' style='height: {{winHeight}}rpx;'>
+      <scroll-view scroll-y='{{true}}' style='height: {{winHeight - (dateFr.getSelfHelpTipsShow(selfHelp, foodItems, consumerCount) ? 110 : 0)}}rpx;'>
         <block wx:for='{{menus}}' wx:key='{{index}}'>
           <view class='c_list {{item.id === checkCategory.id ? "active" : ""}}' data-category='{{item}}' bindtap='bindChangeCategoryId'>
             <view class='c_num' wx:if='{{dateFr.getCheckedFoodMenuCount(foodItems, item.id) !== 0}}'>{{dateFr.getCheckedFoodMenuCount(foodItems, item.id)}}</view>
@@ -71,13 +72,13 @@
         </block>
       </scroll-view>
     </view>
-    <view class='food_list' style='height: {{winHeight}}rpx;'>
+    <view class='food_list' style='height: {{winHeight - (dateFr.getSelfHelpTipsShow(selfHelp, foodItems, consumerCount) ? 110 : 0)}}rpx;'>
       <view class='category_title'>
         <text>{{checkCategory.name}}</text>
         <text>已选{{dateFr.getCheckedFoodMenuCount(foodItems, checkCategory.id)}}份</text>
       </view>
-      <scroll-view scroll-y='{{true}}' style='height: {{winHeight - 80}}rpx;'>
-        <block wx:for='{{menuItem[checkCategory.id]}}' wx:key='{{index}}'>
+      <scroll-view scroll-y='{{true}}' style='height: {{winHeight - 80 - (dateFr.getSelfHelpTipsShow(selfHelp, foodItems, consumerCount) ? 110 : 0)}}rpx;'>
+        <block wx:for='{{checkCategory.items}}' wx:key='{{index}}'>
           <view class='food_tips {{dateFr.getNowFoodOrderNum(foodItems, item.foods[0].id) ? "selected" : ""}}' wx:if='{{checkCategory.type === 1}}'>以下菜品必点</view>
           <view class='food' data-item='{{item}}'>
             <view class='poster' data-food='{{item.foods[0]}}' bindtap='handleClickFoodPoster'>
@@ -179,7 +180,7 @@
       <image src='../../img/order/pay_icon_close.png'></image>
     </view>
   </view>
-  <view class='mandatory_tips' bindtap='handleSwitchMandatoryFood' wx:if='{{dateFr.mandatoryTipsShow(checkCategory, menus, menuItem, foodItems)}}'>选择必点菜</view>
+  <view class='mandatory_tips' bindtap='handleSwitchMandatoryFood' wx:if='{{dateFr.mandatoryTipsShow(checkCategory, menus, foodItems)}}'>选择必点菜</view>
   <view class='bottom_content'>
     <view class='num_price'>
       <view class='num'>{{dateFr.getNowFoodOrderFoodNumber(orderItems)}}</view>
